--- a/index.html
+++ b/index.html
@@ -266,11 +266,11 @@
         <img src="friedchicken.png" alt="Restaurant Image">
         <div class="text-content">
             <h1>Welcome to Our Restaurant</h1>
-            <p>We specialize in delicious fried chicken and mouth-watering hamburgers. Our unique recipes and high-quality ingredients ensure that every bite is packed with flavor and satisfaction.</p>
+            <p>Nous sommes spécialisés dans le délicieux poulet frit et les hamburgers appétissants. Nos recettes uniques et nos ingrédients de haute qualité garantissent que chaque bouchée soit pleine de saveur et de satisfaction.</p>
         </div>
     </div>
     <div id="menu" class="menu-section">
-        <h1>our menu</h1>
+        <h1>Notre menu</h1>
         <a href="menu1.jpg">
             <img src="menu1.jpg" alt="Menu 1" class="menu-image">
         </a>
@@ -279,7 +279,7 @@
         </a>
     </div>
     <div id="rating" class="ratings-section">
-        <h2>Client Ratings</h2>
+        <h2>Avis clients</h2>
         <div class="rating">
             <p class="client-name">Soundous El karoui</p>
             <p>⭐⭐⭐⭐⭐</p>
