--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/css/lightbox.min.css" rel="stylesheet" />
     <link rel="icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSwvgm0ZBxf1f6VXJIxqhrpdKcV6CgfkgZRBA&s">
-    <title>Restaurant Homepage</title>
+    <title>Chicken Light</title>
     <style>
         body {
             font-family: Arial, sans-serif;
