--- a/index.html
+++ b/index.html
@@ -300,19 +300,19 @@
         <a href="https://www.google.com/search?client=opera-gx&q=chicken+light&sourceid=opera&ie=UTF-8&oe=UTF-8#lrd=0x12e2cbbb0fde3ac3:0x8361ebc412b9feeb,1,,,,"><p class="see-more">voir plus sur avis google</p></a>
         <footer id="contact" class="footer">
             <div class="contact-info">
-                <h3>Contact Us</h3>
+                <h3>Contactez nous</h3>
                 <p>Phone: 28 000 500    </p>
                 <p>Email: mondherfredj134@gmail.com</p>
             </div>
             <div class="location">
-                <h3>Location</h3>
+                <h3>Adresse</h3>
                 <a href="https://maps.app.goo.gl/nDSZ33a7nDyyQimSA"><u><p>Rue du Métal 2034 soukra ariana</p></u></a>
             </div>
             <div class="logo">
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSwvgm0ZBxf1f6VXJIxqhrpdKcV6CgfkgZRBA&s" alt="Restaurant Logo">
             </div>
             <div class="social-icons">
-                <h3>Follow Us</h3>
+                <h3>Suivez-nous</h3>
                 <a href="https://www.facebook.com/Restaurant.Chicken.Light"><img src="https://upload.wikimedia.org/wikipedia/commons/b/b9/2023_Facebook_icon.svg" alt="Facebook"></a>
                 <a href="https://www.tiktok.com/@chicken.light.tunisie?is_from_webapp=1&sender_device=pc"><img src="https://cdn4.iconfinder.com/data/icons/social-media-flat-7/64/Social-media_Tiktok-512.png" alt="Tiktok"></a>
                 <a href="https://www.instagram.com/chicken_light_tunisie?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Instagram_icon.png/2048px-Instagram_icon.png" alt="Instagram"></a>
