--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
             border-radius: 15px;
             cursor: pointer;
             margin: 5px;
+            margin-top: 10px;
             transition: background-color 0.3s, color 0.3s;
         }
         .navbar .contact-button:hover {
