--- a/index.html
+++ b/index.html
@@ -44,7 +44,6 @@
             border-radius: 15px;
             cursor: pointer;
             margin: 5px;
-            margin-top: 10px;
             transition: background-color 0.3s, color 0.3s;
         }
         .navbar .contact-button:hover {
@@ -120,6 +119,9 @@
                 width: 100%;
                 text-align: center;
                 margin: 5px 0;
+            }
+            .navbar .contact-button {
+                margin-top: 10px;
             }
             .hero-section {
                 flex-direction: column;
@@ -226,6 +228,9 @@
             .menu-image {
                 width: 90%;
             }
+            .navbar .contact-button {
+                margin-top: 10px;
+            }
         }
         @media (max-width: 299px) {
             .navbar a, .navbar .contact-button {
@@ -238,6 +243,9 @@
             .menu-section h1 {
                 font-size: 18px;
             }
+            .navbar .contact-button {
+                margin-top: 10px;
+            }
         }
         @media (max-width: 262px) {
             .navbar a, .navbar .contact-button {
@@ -249,6 +257,9 @@
             }
             .menu-section h1 {
                 font-size: 18px;
+            }
+            .navbar .contact-button {
+                margin-top: 10px;
             }
         }
     </style>
